# uao-model-deployment-course22

./: .gitignore
MLaaS/walle/: main.py  pyproject.toml  service-account.json
MLaaS/walle/walle/core/: robot.py
backend/fastapi-demo/: api.py  test.http  train.py
backend/my_first_api/: api.py  client.py  main.py  pyproject.toml
backend/tfserving-demo/: cmd.txt
frontend/ml5/: app.js  app2.js  index.html  styles.css
